--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,9 @@
 PORT=3000
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/erasmus_crm
-JWT_SECRET=change_me_in_prod
 CORS_ORIGIN=http://localhost:5173
+JWT_SECRET=change_me
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=changeme
+DB_NAME=erasmus_crm
